--- a/0_simple/Vagrantfile
+++ b/0_simple/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant.configure("2") do |config|
   # 2) Dependencies
   config.vm.provision "shell", inline: <<-SHELL
     export DEBIAN_FRONTEND=noninteractive
-    apt-get update -y && apt-get upgrade -y && apt-get autoremove -y
+    apt-get update -y
 
     apt install -y nginx
   SHELL
